--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
         <title>Dreamsicle Open Source</title>
         <link rel="stylesheet" type="text/css" href="index.css"> 
         <link href="https://fonts.googleapis.com/css?family=Chivo:400,700|Work+Sans:400,700" rel="stylesheet">
+        <script src="js/demo.js" defer></script>
     </head>
     <body>
         <div id="header">
-        <h1>Dreamsicle Developer Hub</h1>
+        <h1 class="accentBG">Dreamsicle Developer Hub</h1>
         </div>
 
         <p>The European languages are members of the same family. Their separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators. To achieve this, it would be necessary to have uniform grammar, pronunciation and more common words. If several languages coalesce, the grammar of the resulting language is more simple and regular than that of the individual languages. </p>
@@ -16,10 +17,9 @@
         <p>The European languages are members of the same family. Their separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators. To achieve this, it would be necessary to have uniform grammar, pronunciation and more common words. If several languages coalesce, the grammar of the resulting language is more simple and regular than that of the individual languages. </p>
         <p>The European languages are members of the same family. Their separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators. To achieve this, it would be necessary to have uniform grammar, pronunciation and more common words. If several languages coalesce, the grammar of the resulting language is more simple and regular than that of the individual languages. </p>
         <p>The European languages are members of the same family. Their separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators. To achieve this, it would be necessary to have uniform grammar, pronunciation and more common words. If several languages coalesce, the grammar of the resulting language is more simple and regular than that of the individual languages. </p>
-        
+
 
 	    <script src="js/jquery.min.js"></script>
 	    <script src="js/geopattern.min.js"></script>
-        <script src="js/demo.js"></script>
     </body>
 </html>
