--- a/pointer/index.html
+++ b/pointer/index.html
@@ -1,38 +1,24 @@
 <html>
     <head>
         <title>Dreamsicle Open Source</title>
-        <link rel="stylesheet" type="text/css" href="index.css"> 
+        <link rel="stylesheet" type="text/css" href="../index.css"> 
         <link href="https://fonts.googleapis.com/css?family=Chivo:400,700|Work+Sans:400,700" rel="stylesheet">
-        <script src="js/demo.js" defer></script>
+        <script src="../js/colorSpecific/purple.js" defer></script>
     </head>
     <body>
         <div id="header">
-        <h1 class="accentBG">Dreamsicle Developer Hub</h1>
+        <h1 class="accentBG">Pointer</h1>
         </div>
         <div class="actualBody">
 
-        <h2 class="accentColor"><img width="40px" src="https://dreamsicle.github.io/branding/Dreamsicle/logo-trans.png"> · Welcome!</h2>
+        <h2 class="accentColor"><img width="40px" src="https://dreamsicle.github.io/branding/Dreamsicle/logo-trans.png"> · Dreamsicle Developer Hub</h2>
 
         <p class="accentBG" style="margin-left: 86px; padding: 1em;">Here you'll find documentation on various Dreamsicle Open Source projects, coding style, pull request and issue formatting, and "supported" frameworks and programming languages.</p>
 
         <p>The European languages are members of the same family. Their separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators. To achieve this, it would be necessary to have uniform grammar, pronunciation and more common words. If several languages coalesce, the grammar of the resulting language is more simple and regular than that of the individual languages. </p>
 
-        <div class="flex">
-
-        <a href="pointer"><div class="purpleBG card">
-            <p>Pointer</p>
-            <small>Discord bot</small>
-        </div></a>
-
-        <div class="card">
-            <p>Nothing's here at the moment :(</p>
-            <small>More coming soon</small>
         </div>
-
-        </div>
-
-        </div>
-	    <script src="js/jquery.min.js"></script>
-	    <script src="js/geopattern.min.js"></script>
+	    <script src="../js/jquery.min.js"></script>
+	    <script src="../js/geopattern.min.js"></script>
     </body>
 </html>
