--- a/index.html
+++ b/index.html
@@ -15,14 +15,47 @@
 
         <p class="accentBG" style="margin-left: 86px; padding: 1em;">Here you'll find documentation on various Dreamsicle Open Source projects, coding style, pull request and issue formatting, and "supported" frameworks and programming languages.</p>
 
-        <p>The European languages are members of the same family. Their separate existence is a myth. For science, music, sport, etc, Europe uses the same vocabulary. The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators. To achieve this, it would be necessary to have uniform grammar, pronunciation and more common words. If several languages coalesce, the grammar of the resulting language is more simple and regular than that of the individual languages. </p>
+        <p>lorem ipsum is boring so have this</p>
 
-        <div class="flex">
+        <p>
+It's everyday bro, with the Disney Channel flow
+5 mill on YouTube in 6 months, never done before
+We pass all the competition man, PewDiePie is next
+Man I'm poppin' all these checks, got a brand new Rolex
+And I met a Lambo too and I'm coming with the crew
+This is Team 10, bitch, who the hell are flippin' you?
+And you know I kick them out if they ain't with the crew
+Yeah, I'm talking about you, you beggin' for attention
+Talking shit on Twitter too but you still hit my phone last night
+It was 4:52 and I got the text to prove
+And all the recordings too, don't make me tell them the truth
+And I just drop some new merch and it's selling like a god, church
+Ohio is where I'm from, we chew 'em like it's gum
+We shooting with a gun, the tattoo just for fun
+I Usain Bolt and run, catch me at game one
+I cannot be outdone, Jake Paul is number one</p>
+
+        <div class="flex" style="max-width: 100%; overflow-x: scroll;">
 
         <a href="pointer"><div class="purpleBG card">
             <p>Pointer</p>
             <small>Discord bot</small>
         </div></a>
+
+        <div class="card blueBG">
+            <p>DreamDB</p>
+            <small>Coming soon</small>
+        </div>
+
+        <div class="card">
+            <p>England is my city</p>
+            <small>If only we had Team 10 to save us...</small>
+        </div>
+
+        <div class="card">
+            <p>Wintier's in-tact dreams</p>
+            <small>Nothing's here at the moment :(</small>
+        </div>
 
         <div class="card">
             <p>Nothing's here at the moment :(</p>
