--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <script src="js/demo.js" defer></script>
     </head>
     <body>
-        <div id="header">
+        <div id="header"><div>
         <h1 class="accentBG">Dreamsicle Developer Hub</h1>
-        </div>
+        </div></div>
         <div class="actualBody">
 
         <h2 class="accentColor"><img width="40px" src="https://dreamsicle.github.io/branding/Dreamsicle/logo-trans.png"> · Welcome!</h2>
