--- a/pointer/index.html
+++ b/pointer/index.html
@@ -6,9 +6,9 @@
         <script src="../js/colorSpecific/purple.js" defer></script>
     </head>
     <body>
-        <div id="header">
+        <div id="header"><div>
         <h1 class="accentBG">Pointer</h1>
-        </div>
+        </div></div>
         <div class="actualBody">
 
         <h2 class="accentColor"><img width="40px" src="https://dreamsicle.github.io/branding/Dreamsicle/logo-trans.png"> · Dreamsicle Developer Hub</h2>
